--- a/java/src/main/webapp/WEB-INF/web.xml
+++ b/java/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,28 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+         version="2.5">
   <!--邮件-->
   <servlet>
     <servlet-name>email</servlet-name>
     <servlet-class>com.yg.email.EmailServlet</servlet-class>
   </servlet>
-  
+
   <servlet-mapping>
     <servlet-name>email</servlet-name>
     <url-pattern>/email/list</url-pattern>
   </servlet-mapping>
 
+  <!--邮件-->
+  <servlet>
+    <servlet-name>emailDelete</servlet-name>
+    <servlet-class>com.yg.email.EmailServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>emailDelete</servlet-name>
+    <url-pattern>/email/delete</url-pattern>
+  </servlet-mapping>
 </web-app>
